<resources>
    <string name="app_name">NFC Card Emulator</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="service_description">HCE Service</string>
    <string name="aid_description">Aid Description</string>
    <string name="c_apdu_keyword">c-apdu</string>
    <string name="r_apdu_keyword">r-apdu</string>
    <string name="command_from_file_text">Command From File</string>
    <string name="response_from_file_text">Response From File</string>
    <string name="invalid_message_1">"INVALID - The command is shorter than min APDU length or its length is not even number"</string>
    <string name="invalid_message_2">"INVALID - The response is not even number"</string>
    <string name="command_tag">SERVICE APDU-C</string>
    <string name="response_tag">SERVICE APDU-R</string>
    <string name="communication_tag">COMMUNICATION</string>
    <string name="command_aborted_with_reason"><![CDATA[SW Command Aborted (6F00) Case —> Reason : The command is shorter than min APDU length or its length is not even number.]]></string>
    <string name="null_command">Command APDU is NULL</string>
    <string name="communication_started">Communication is Started…</string>
    <string name="communication_ended">Communication is Ended.</string>
    <string name="apdu_c">"C-APDU : "</string>
    <string name="apdu_r">"R-APDU : "</string>
    <string name="default_selected_file_text">No File Selected</string>
    <string name="service_started">Started</string>
    <string name="service_stopped">Stopped</string>
    <string name="logs_title_for_all">*** ALL LOG MESSAGES ***</string>
    <string name="logs_title_for_communication">*** COMMUNICATION LOG MESSAGES ***</string>
    <string name="logs_no_communication">There is no Communication Log</string>
    <string name="start_service_tag">START SERVICE</string>
    <string name="start_service_text">Host Card Emulator Service is activated.</string>
    <string name="stop_service_tag">STOP SERVICE</string>
    <string name="stop_service_text">Host Card Emulator Service is inactivated.</string>
    <string name="help_tag">HELP</string>
    <string name="help_text">Help requested.</string>
    <string name="about_tag">ABOUT</string>
    <string name="about_text">About requested.</string>
    <string name="share_message_tag">Share Message</string>
    <string name="share_message_text_1">Share message button used.</string>
    <string name="share_message_text_2">Message successfully shared.</string>
    <string name="navigate_up_tag">NAVIGATE UP</string>
    <string name="on_key_down_tag">ON KEY DOWN</string>
    <string name="move_back_text">The user returned back to the previous screen.</string>
    <string name="hce_email_title">HCE Log Messages</string>
    <string name="dialog_box_tag">DIALOG BOX</string>
    <string name="dialog_box_title">Log Messages</string>
    <string name="dialog_box_text">Do you want to clear all log messages now?</string>
    <string name="dialog_box_message_1">All log messages are deleted.</string>
    <string name="dialog_box_message_2">All log messages were kept intact.</string>
    <string name="dialog_box_yes">Yes</string>
    <string name="dialog_box_no">No</string>
    <string name="manage_file_button_tag">MANAGE FILE BUTTON</string>
    <string name="manage_file_button_text">Manage File Button clicked.</string>
    <string name="snack_bar_message_1">Please select a file first.</string>
    <string name="currently_service_title">Service Status</string>
    <string name="selected_file_title">Selected File</string>
    <string name="communication_title">Communication Logs</string>
    <string name="service_inactive">Stopped</string>
    <string name="service_active">Started</string>
    <string name="menu_selected_file">No file selected</string>
    <string name="browse_tag">BROWSE BUTTON</string>
    <string name="browse_text">Browse Button clicked.</string>
    <string name="import_tag">IMPORT BUTTON</string>
    <string name="import_text_1">The file is imported into application files as</string>
    <string name="import_text_2">is imported.</string>
    <string name="not_imported_missing_filename">Not imported… Please enter a filename.</string>
    <string name="not_imported_extension_entered">Not imported… Please do not enter file extension.</string>
    <string name="not_imported_missing_source_file">Not imported… Please choose a source file.</string>
    <string name="select_file_tag">SELECT FILE</string>
    <string name="delete_file_tag">DELETE FILE</string>
    <string name="on_item_selected_tag">ON ITEM SELECTED</string>
    <string name="on_item_selected_text">Spinner is pointing to the file that</string>
    <string name="snack_bar_message_2">is selected.</string>
    <string name="snack_bar_message_3">is in use -></string>
    <string name="snack_bar_message_4">Command Number :</string>
    <string name="snack_bar_message_5">Response Number :</string>
    <string name="snack_bar_message_6">is deleted.</string>
    <string name="snack_bar_no_file_to_select">No file to select.</string>
    <string name="snack_bar_no_file_to_delete">No file to delete.</string>
    <string name="notice_tag">NOTICE</string>
    <string name="notice_text">The file in use has been deleted. Service will be inactivated…</string>
    <string name="button_browse">Browse</string>
    <string name="button_show_info">Show Info</string>
    <string name="button_import">Import</string>
    <string name="file_selection">FILE SELECTION</string>
    <string name="add_new_file">ADD NEW FILE</string>
    <string name="button_menu">Menu</string>
    <string name="button_set_file">Use Selected File</string>
    <string name="button_delete_file">Delete Selected File</string>
    <string name="rename_file_title_text">File selected. Rename it (Optional).</string>
    <string name="check_file_browse_selected_case">Source File Active</string>
    <string name="check_file_browse_default">No Source File</string>
    <string name="ins_select_case">INS Select (A4) Case</string>
    <string name="ins_read_binary">INS Read Binary (B0) Case</string>
    <string name="ins_get_processing_option">INS Get Processing Option (A8) Case</string>
    <string name="ins_read_record">INS Read Record (B2) Case</string>
    <string name="ins_perform_security">INS Perform Security Operation (2A) Case</string>
    <string name="ins_read_ndef">INS Read NDEF (C0) Case</string>
    <string name="ins_write_binary">INS Write Binary (D0) Case</string>
    <string name="ins_update_binary">INS Update Binary (D6) Case</string>
    <string name="ins_generate_app_cryptogram">INS Get AC (AE) Case</string>
    <string name="ins_get_data">INS Get Data (CA) Case</string>
    <string name="file_name_tag">FILE NAME :</string>
    <string name="first_fragment_label">Host Based Card Emulator</string>
    <string name="second_fragment_label">Manage File</string>
    <string name="help_fragment_label">Help</string>
    <string name="about_fragment_label">About</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="button_start_service">Start Service</string>
    <string name="button_stop_service">Stop Service</string>
    <string name="button_manage_file">Manage File</string>
    <string name="explanation"> <b>This is an opensource application. <i>Free to use.</i></b> </string>
    <string name="developer"> <b>Developer : </b> Okan Atas </string>
    <string name="email"> <b>Email : </b> okanatas.ca@gmail.com </string>
    <string name="github"> <b>Github : </b> /okanatas </string>
    <string name="source_code"> <b>Source Code : </b> /okanatas/NFCCardEmulator </string>
    <string name="note"> <b>NOTE : </b>If you encounter any bugs, you can send me an e-mail to report it. Thank you for your interest.</string>
</resources>