<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenFragment">

    <Button
        android:id="@+id/button_start_stop_service"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:textSize="12sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/button_manage_file"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/button_manage_file"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2"
        app:layout_constraintVertical_bias="0.023" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="411dp"
        android:layout_height="25dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022">

        <TextView
            android:id="@+id/currently_service_title"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/currently_service_title"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.134" />

        <TextView
            android:id="@+id/currently_service"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="385dp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="411dp"
        android:layout_height="29dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow1"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/selected_file_title"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/selected_file_title"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.778"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123" />

        <TextView
            android:id="@+id/selected_file_text"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="301dp"
            tools:layout_editor_absoluteY="172dp" />
    </TableRow>

    <TextView
        android:id="@+id/communication_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/communication_title"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start_stop_service"
        app:layout_constraintVertical_bias="0.061" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/communication_title"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/comm_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="100dp">

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>